--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,6 @@
+source 'git@github.com:funkyHS/FunkyFMSpecs.git'  #私有的远程代码仓库
+source 'https://github.com/CocoaPods/Specs.git'  #官方仓库的地址
+
 use_frameworks!
 
 target 'FunkyFMDownLoad_Example' do
